k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: g8s
  labels: 
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: charmingruby/g8s:0.0.1
        ports:
          - containerPort: 3333
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            memory: "512Mi"
            cpu: "100m"
