k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: g8s
spec:
  selector:
    app: api
  type: ClusterIP
  ports:
  - name: api
    protocol: TCP
    port: 80
    targetPort: 3333
